methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:21: error: ';' expected but 'return' found.
  }  return vuBiscuit
     ^